# alphaloop-core

./: .cursorignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  conftest.py  cursor-agent.md  docker-compose.yml  env.example  environment.yml  pyproject.toml  pytest.ini
.github/: pull_request_template.md  release_template.md
.github/workflows/: ci.yml  release.yml
config/: database_schema.yaml
docs/architecture/: overview.md  package-integration.md
docs/architecture/decisions/: 0001-architecture-principles.md  0002-business-data-flow-principles.md
docs/architecture/diagrams/: system-overview.md
docs/development/: axioms-reference.md  coding-standards.md
examples/: currency_configuration_demo.py  logging_demo.py  security_demo.py  using_official_packages.py
infrastructure/: README.md
infrastructure/alphaloop-cache/: README.md  pyproject.toml
infrastructure/alphaloop-cache/src/alphaloop_cache/core/: connection.py  price_cache.py
infrastructure/alphaloop-heartbeat/: README.md  pyproject.toml
infrastructure/alphaloop-heartbeat/src/alphaloop_heartbeat/: __init__.py
infrastructure/alphaloop-heartbeat/src/alphaloop_heartbeat/config/: settings.py
infrastructure/alphaloop-heartbeat/src/alphaloop_heartbeat/core/: heartbeat_checker.py
infrastructure/alphaloop-heartbeat/tests/: test_heartbeat_basic.py  test_heartbeat_scenarios.py
infrastructure/alphaloop-logging/: README.md  pyproject.toml
infrastructure/alphaloop-logging/src/alphaloop_logging/: exceptions.py
infrastructure/alphaloop-logging/src/alphaloop_logging/config/: settings.py
infrastructure/alphaloop-logging/src/alphaloop_logging/core/: logger.py
infrastructure/alphaloop-logging/tests/: test_logger.py
infrastructure/alphaloop-security/: README.md  pyproject.toml
infrastructure/alphaloop-security/src/alphaloop_security/: auth.py  encryption.py
infrastructure/alphaloop-security/tests/: test_auth.py
infrastructure/alphaloop-storage/: README.md  pyproject.toml
infrastructure/alphaloop-storage/src/alphaloop_storage/: __init__.py
scripts/: create-database-schemas.sql  fix-formatting.py  setup-database-and-test.sh  setup_conda.bat  setup_conda.sh  test-database-and-services.sh  test-services-e2e.sh  test_conda_env.py
scripts/github-pr-tools/: README.md  analyze_pr_comments.py  env.example  export_github_pr_comments.sh  export_unresolved_threads.sh  export_unresolved_threads_markdown.sh  make_current_checklist.sh
services/: README.md  docker-compose.yml
services/alphaloop-database/: README.md  docker-compose.yml  env.example  init-database.sh
services/alphaloop-market-data/: Dockerfile  docker-compose.cloud.yml  docker-compose.local.yml  env.example.cloud  env.example.local  requirements.txt
services/alphaloop-market-data/src/alphaloop_market_data/: __init__.py  main.py
services/alphaloop-system-metrics/: Dockerfile  docker-compose.yml  env.example  requirements.txt
services/alphaloop-system-metrics/src/alphaloop_system_metrics/: __init__.py  main.py
services/scripts/: start-cloud.sh  start-local.sh  test-e2e.sh
src/alphaloop_core/: __init__.py  api.py  cli.py  config.py  py.typed
src/alphaloop_core/domain/entities/: base.py  market_data.py  system_metadata.py  system_metrics.py  ticker.py  ticker_metadata.py
src/alphaloop_core/domain/repositories/: base.py  ticker_repository.py
src/alphaloop_core/domain/services/: exchange_service.py  market_data_service.py
src/alphaloop_core/domain/value_objects/: exchange_id.py  money.py  price.py  quantity.py
src/alphaloop_core/infrastructure/database/: connection.py
src/alphaloop_core/services/: __init__.py  market_data.py  system_metrics.py
src/alphaloop_core/services/cache/: __init__.py  price_cache.py
src/alphaloop_core/shared/exceptions/: application_exceptions.py  base.py  infrastructure_exceptions.py  validation_exceptions.py
src/alphaloop_core/shared/types/: enums.py
src/alphaloop_core/shared/utils/: config.py  package_config.py  schema_loader.py  service_factory.py
src/infrastructure/: README.md
src/infrastructure/alphaloop_cache/: README.md  __init__.py  exceptions.py
src/infrastructure/alphaloop_cache/core/: __init__.py  connection.py  generic_cache.py  price_cache.py  pubsub.py
src/infrastructure/alphaloop_cache/models/: __init__.py  cache_entry.py
src/infrastructure/alphaloop_cache/tests/: test_cache_basic.py
src/infrastructure/alphaloop_cache/utils/: __init__.py  key_builder.py
src/infrastructure/alphaloop_heartbeat/: README.md
src/infrastructure/alphaloop_heartbeat/config/: settings.py
src/infrastructure/alphaloop_heartbeat/core/: heartbeat_checker.py  heartbeat_generator.py
src/infrastructure/alphaloop_heartbeat/tests/: test_heartbeat_basic.py  test_heartbeat_scenarios.py
src/infrastructure/alphaloop_heartbeat/utils/: file_utils.py  time_utils.py
src/infrastructure/alphaloop_logging/: README.md
src/infrastructure/alphaloop_logging/config/: settings.py
src/infrastructure/alphaloop_logging/core/: logger.py
src/infrastructure/alphaloop_logging/formatters/: base.py  file_formatter.py  telegram_formatter.py
src/infrastructure/alphaloop_logging/handlers/: base.py  console_handler.py  file_handler.py  telegram_handler.py
src/infrastructure/alphaloop_logging/tests/: test_logger.py
src/infrastructure/alphaloop_security/: README.md  auth.py  encryption.py  exceptions.py  integrity.py  secure_url.py
src/infrastructure/alphaloop_security/tests/: test_auth.py  test_encryption.py
src/infrastructure/alphaloop_storage/: README.md  __init__.py  __main__.py  cli.py
src/infrastructure/alphaloop_storage/core/: __init__.py  connection.py  database_setup.py  schema_generator.py  schema_manager.py  table_handler.py
src/infrastructure/alphaloop_storage/models/: base.py
src/infrastructure/alphaloop_storage/utils/: query_builder.py
tests/: __init__.py
tests/integration/: __init__.py  test_api_integration.py
tests/unit/: __init__.py  test_api.py  test_config.py
(+5 files in other folders)
