[tool.poetry]
name = "alphaloop-core"
version = "0.1.0"
description = "AlphaLoop Core - A comprehensive trading system with Clean Architecture"
authors = ["Didac Cristobal-Canals <didac.crst@gmail.com>"]
readme = "README.md"
packages = [{include = "alphaloop_core", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.32"}
pydantic = "^2.10"
python-dotenv = "^1.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.29"
aio-pika = "^9.0"
aiofiles = "^24.0"
pyyaml = "^6.0.1"
aiohttp = "^3.9.0"
rich = "^13.7.0"
psutil = "^5.9.0"
redis = "^5.0.0"
cryptography = "^42.0.0"
pandas = "^2.0.0"
polars = "^0.20.0"
psycopg2-binary = "^2.9.0"

# Official AlphaLoop packages (simplified - direct Python modules)
# These are internal modules, not separate packages

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
ruff = "*"
mypy = "^1.10"
pytest-dotenv = "^0.5.2"
hypothesis = "^6.100"
httpx = "^0.27"
types-redis = "^4.6"
types-requests = "^2.31"
pandas-stubs = "^2.2"
types-PyYAML = "^6.0"
pre-commit = "^3.7"

[tool.poetry.scripts]
alphaloop-cli = "alphaloop_core.cli:main"
alphaloop-api = "alphaloop_core.api:app"

[tool.poetry.urls]
"Homepage" = "https://github.com/your-username/alphaloop-core"
"Repository" = "https://github.com/your-username/alphaloop-core"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config"
]

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
fixable = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["alphaloop_core", "infrastructure"]
force-sort-within-sections = true
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = false
strict_equality = true
disable_error_code = ["import-not-found", "misc", "unused-ignore", "unreachable", "no-any-return", "dict-item"]


[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "plotly.*",
    "ccxt.*",
    "httpx.*",
    "pykka.*",
    "fastapi.*",
    "pydantic.*",
    "dotenv.*"
]
ignore_missing_imports = true
