[tool.poetry]
name = "alphaloop-logging"
version = "0.1.0"
description = "Advanced logging package for AlphaLoop Core with multi-handler support, Telegram integration, and structured logging"
authors = ["Didac Cristobal-Canals <didac.crst@gmail.com>"]
readme = "README.md"
packages = [{include = "alphaloop_logging", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9.0"
pydantic = "^2.0.0"
structlog = "^23.2.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.12.0"
ruff = "^0.1.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901", "B904"]

# Disable MyPy for now due to complex async file handling
# [tool.mypy]
# python_version = "3.12"
# warn_return_any = true
# warn_unused_configs = true
# disallow_untyped_defs = true
